# gitlit

./: .gitignore  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: dependencies.py  main.py
api/app/models/: schemas.py
api/app/routes/: __init__.py  ingest.py  query.py
api/app/services/: chunker.py  embeddings.py  llm.py  scraper.py  vector_store.py
api/tests/: conftest.py
api/tests/integration/: conftest.py
api/tests/unit/: test_chunker.py  test_embeddings.py  test_scraper.py  test_vectore_store.py
