[project]
name = "gitlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaan-wq",email = "kaanucar9@gmail.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "pymilvus (>=2.6.10,<3.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "gitpython (>=3.1.46,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "onnxruntime (==1.23.2)",
    "fastembed (==0.7.4)",
    "torch (==2.2.2)",
    "sentence-transformers (>=5.3.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.7,<0.16.0)"
]
